// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AddPrayerScreenConnected component should accept a title 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "marginHorizontal": 16,
                  "marginVertical": 12,
                  "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 16,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 24,
                      "paddingVertical": 24,
                    }
                  }
                >
                  <View
                    hasAvatar={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "paddingBottom": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderRadius": 80,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 80,
                            "justifyContent": "center",
                            "width": 80,
                          }
                        }
                        themeSize={80}
                      >
                        <Image
                          fadeDuration={250}
                          onLoad={[Function]}
                          size="medium"
                          source={
                            Array [
                              Object {
                                "__typename": "ImageMediaSource",
                                "cache": "force-cache",
                                "uri": "https://1234.image.com",
                              },
                            ]
                          }
                          style={
                            Object {
                              "backgroundColor": "#A5A5A5",
                              "borderRadius": 40,
                              "bottom": 0,
                              "height": "100%",
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": "100%",
                            }
                          }
                          themeSize={80}
                        />
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Custom
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={24}
                        bbWidth={24}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "marginRight": 8,
                            },
                            null,
                            Object {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            Array [
                              0,
                              4278190080,
                            ]
                          }
                          fillOpacity={1}
                          fillRule={1}
                          font={Object {}}
                          matrix={
                            Array [
                              1,
                              0,
                              0,
                              1,
                              0,
                              0,
                            ]
                          }
                          opacity={1}
                          originX={0}
                          originY={0}
                          propList={Array []}
                          rotation={0}
                          scaleX={1}
                          scaleY={1}
                          skewX={0}
                          skewY={0}
                          stroke={null}
                          strokeDasharray={null}
                          strokeDashoffset={null}
                          strokeLinecap={0}
                          strokeLinejoin={0}
                          strokeMiterlimit={4}
                          strokeOpacity={1}
                          strokeWidth={1}
                          vectorEffect={0}
                          x={0}
                          y={0}
                        >
                          <RNSVGPath
                            d="M12 23.5a11.5 11.5 0 100-23 11.5 11.5 0 000 23zm0 .5a12 12 0 100-24 12 12 0 000 24z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={0}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M17.7 11.7h-5.4V6.3a.3.3 0 00-.6 0v5.4H6.3a.3.3 0 000 .6h5.4v5.4a.3.3 0 00.6 0v-5.4h5.4a.3.3 0 000-.6z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        bold={false}
                        italic={false}
                        style={
                          Object {
                            "color": "#303030",
                            "fontFamily": "InterUI-Regular",
                            "fontSize": 16,
                            "lineHeight": 26,
                          }
                        }
                      >
                        I need prayer for...
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`The AddPrayerScreenConnected component should create a prayer 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "marginHorizontal": 16,
                  "marginVertical": 12,
                  "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 16,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 24,
                      "paddingVertical": 24,
                    }
                  }
                >
                  <View
                    hasAvatar={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "paddingBottom": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderRadius": 80,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 80,
                            "justifyContent": "center",
                            "width": 80,
                          }
                        }
                        themeSize={80}
                      >
                        <Image
                          fadeDuration={250}
                          onLoad={[Function]}
                          size="medium"
                          source={
                            Array [
                              Object {
                                "__typename": "ImageMediaSource",
                                "cache": "force-cache",
                                "uri": "https://1234.image.com",
                              },
                            ]
                          }
                          style={
                            Object {
                              "backgroundColor": "#A5A5A5",
                              "borderRadius": 40,
                              "bottom": 0,
                              "height": "100%",
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": "100%",
                            }
                          }
                          themeSize={80}
                        />
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Add your prayer
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={24}
                        bbWidth={24}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "marginRight": 8,
                            },
                            null,
                            Object {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            Array [
                              0,
                              4278190080,
                            ]
                          }
                          fillOpacity={1}
                          fillRule={1}
                          font={Object {}}
                          matrix={
                            Array [
                              1,
                              0,
                              0,
                              1,
                              0,
                              0,
                            ]
                          }
                          opacity={1}
                          originX={0}
                          originY={0}
                          propList={Array []}
                          rotation={0}
                          scaleX={1}
                          scaleY={1}
                          skewX={0}
                          skewY={0}
                          stroke={null}
                          strokeDasharray={null}
                          strokeDashoffset={null}
                          strokeLinecap={0}
                          strokeLinejoin={0}
                          strokeMiterlimit={4}
                          strokeOpacity={1}
                          strokeWidth={1}
                          vectorEffect={0}
                          x={0}
                          y={0}
                        >
                          <RNSVGPath
                            d="M12 23.5a11.5 11.5 0 100-23 11.5 11.5 0 000 23zm0 .5a12 12 0 100-24 12 12 0 000 24z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={0}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M17.7 11.7h-5.4V6.3a.3.3 0 00-.6 0v5.4H6.3a.3.3 0 000 .6h5.4v5.4a.3.3 0 00.6 0v-5.4h5.4a.3.3 0 000-.6z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        bold={false}
                        italic={false}
                        style={
                          Object {
                            "color": "#303030",
                            "fontFamily": "InterUI-Regular",
                            "fontSize": 16,
                            "lineHeight": 26,
                          }
                        }
                      >
                        I need prayer for...
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <BVLinearGradient
      colors={
        Array [
          4294967295,
          4294506484,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Object {
          "bottom": 0,
          "flex": 1,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Image
        blurRadius={200}
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "__typename": "ImageMediaSource",
              "cache": "force-cache",
              "uri": "https://1234.image.com",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "bottom": 0,
            "left": 0,
            "opacity": 0.5,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <RCTScrollView
          contentContainerStyle={
            Object {
              "flexGrow": 1,
            }
          }
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="never"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexGrow": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Image
                    avatarWidth="40%"
                    fadeDuration={250}
                    onLoad={[Function]}
                    source={
                      Array [
                        Object {
                          "__typename": "ImageMediaSource",
                          "cache": "force-cache",
                          "uri": "https://1234.image.com",
                        },
                      ]
                    }
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "borderRadius": 1000,
                        "width": "40%",
                        "zIndex": 100,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexGrow": 1,
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Black",
                        "fontSize": 24,
                        "lineHeight": 27.6,
                        "textAlign": "center",
                      }
                    }
                  >
                    Thank you for sharing.
                  </Text>
                  <View
                    style={
                      Object {
                        "paddingHorizontal": "10%",
                        "paddingVertical": 16,
                      }
                    }
                  >
                    <Text
                      bold={false}
                      italic={false}
                      style={
                        Object {
                          "color": "#303030",
                          "fontFamily": "InterUI-Regular",
                          "fontSize": 16,
                          "lineHeight": 26,
                          "textAlign": "center",
                        }
                      }
                    >
                      <Text>
                        <Text
                          bold={false}
                          italic={false}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "DroidSerif",
                              "fontSize": 16,
                              "lineHeight": 26,
                            }
                          }
                        >
                          This is the confidence we have in approaching God: that if we ask anything according to his will, he hears us.
                          

                          <Text
                            bold={false}
                            italic={false}
                            style={
                              Object {
                                "color": "#505050",
                                "fontFamily": "DroidSerif",
                                "fontSize": 9.6,
                                "lineHeight": 26,
                              }
                            }
                          >
                            1 John 5:14
                          </Text>
                        </Text>
                        


                        <Text
                          bold={false}
                          italic={false}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Regular",
                              "fontSize": 16,
                              "lineHeight": 26,
                            }
                          }
                        >
                          We’re praying with you
                          

                          and believe in you.
                        </Text>
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  bordered={false}
                  disabled={true}
                  pill={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#00676D",
                      "borderColor": "#00676D",
                      "borderRadius": 48,
                      "borderWidth": 2,
                      "elevation": 2,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "overflow": "hidden",
                      "paddingHorizontal": 16,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Pray for others
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </BVLinearGradient>
  </View>,
]
`;

exports[`The AddPrayerScreenConnected component should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "marginHorizontal": 16,
                  "marginVertical": 12,
                  "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 16,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 24,
                      "paddingVertical": 24,
                    }
                  }
                >
                  <View
                    hasAvatar={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "paddingBottom": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderRadius": 80,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 80,
                            "justifyContent": "center",
                            "width": 80,
                          }
                        }
                        themeSize={80}
                      >
                        <Image
                          fadeDuration={250}
                          onLoad={[Function]}
                          size="medium"
                          source={
                            Array [
                              Object {
                                "__typename": "ImageMediaSource",
                                "cache": "force-cache",
                                "uri": "https://1234.image.com",
                              },
                            ]
                          }
                          style={
                            Object {
                              "backgroundColor": "#A5A5A5",
                              "borderRadius": 40,
                              "bottom": 0,
                              "height": "100%",
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": "100%",
                            }
                          }
                          themeSize={80}
                        />
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Add your prayer
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={24}
                        bbWidth={24}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "marginRight": 8,
                            },
                            null,
                            Object {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            Array [
                              0,
                              4278190080,
                            ]
                          }
                          fillOpacity={1}
                          fillRule={1}
                          font={Object {}}
                          matrix={
                            Array [
                              1,
                              0,
                              0,
                              1,
                              0,
                              0,
                            ]
                          }
                          opacity={1}
                          originX={0}
                          originY={0}
                          propList={Array []}
                          rotation={0}
                          scaleX={1}
                          scaleY={1}
                          skewX={0}
                          skewY={0}
                          stroke={null}
                          strokeDasharray={null}
                          strokeDashoffset={null}
                          strokeLinecap={0}
                          strokeLinejoin={0}
                          strokeMiterlimit={4}
                          strokeOpacity={1}
                          strokeWidth={1}
                          vectorEffect={0}
                          x={0}
                          y={0}
                        >
                          <RNSVGPath
                            d="M12 23.5a11.5 11.5 0 100-23 11.5 11.5 0 000 23zm0 .5a12 12 0 100-24 12 12 0 000 24z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={0}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M17.7 11.7h-5.4V6.3a.3.3 0 00-.6 0v5.4H6.3a.3.3 0 000 .6h5.4v5.4a.3.3 0 00.6 0v-5.4h5.4a.3.3 0 000-.6z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        bold={false}
                        italic={false}
                        style={
                          Object {
                            "color": "#303030",
                            "fontFamily": "InterUI-Regular",
                            "fontSize": 16,
                            "lineHeight": 26,
                          }
                        }
                      >
                        I need prayer for...
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`The AddPrayerScreenConnected component should render a custom component 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            {"profile":{"id":"Person:1234","__typename":"Person","photo":{"__typename":"ImageMediaSource","uri":"https://1234.image.com"}},"title":"Add your prayer"}
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`The AddPrayerScreenConnected component should render a custom post-add component 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "marginHorizontal": 16,
                  "marginVertical": 12,
                  "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 16,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 24,
                      "paddingVertical": 24,
                    }
                  }
                >
                  <View
                    hasAvatar={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "paddingBottom": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderRadius": 80,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 80,
                            "justifyContent": "center",
                            "width": 80,
                          }
                        }
                        themeSize={80}
                      >
                        <Image
                          fadeDuration={250}
                          onLoad={[Function]}
                          size="medium"
                          source={
                            Array [
                              Object {
                                "__typename": "ImageMediaSource",
                                "cache": "force-cache",
                                "uri": "https://1234.image.com",
                              },
                            ]
                          }
                          style={
                            Object {
                              "backgroundColor": "#A5A5A5",
                              "borderRadius": 40,
                              "bottom": 0,
                              "height": "100%",
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": "100%",
                            }
                          }
                          themeSize={80}
                        />
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Add your prayer
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={24}
                        bbWidth={24}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "marginRight": 8,
                            },
                            null,
                            Object {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            Array [
                              0,
                              4278190080,
                            ]
                          }
                          fillOpacity={1}
                          fillRule={1}
                          font={Object {}}
                          matrix={
                            Array [
                              1,
                              0,
                              0,
                              1,
                              0,
                              0,
                            ]
                          }
                          opacity={1}
                          originX={0}
                          originY={0}
                          propList={Array []}
                          rotation={0}
                          scaleX={1}
                          scaleY={1}
                          skewX={0}
                          skewY={0}
                          stroke={null}
                          strokeDasharray={null}
                          strokeDashoffset={null}
                          strokeLinecap={0}
                          strokeLinejoin={0}
                          strokeMiterlimit={4}
                          strokeOpacity={1}
                          strokeWidth={1}
                          vectorEffect={0}
                          x={0}
                          y={0}
                        >
                          <RNSVGPath
                            d="M12 23.5a11.5 11.5 0 100-23 11.5 11.5 0 000 23zm0 .5a12 12 0 100-24 12 12 0 000 24z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={0}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M17.7 11.7h-5.4V6.3a.3.3 0 00-.6 0v5.4H6.3a.3.3 0 000 .6h5.4v5.4a.3.3 0 00.6 0v-5.4h5.4a.3.3 0 000-.6z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        bold={false}
                        italic={false}
                        style={
                          Object {
                            "color": "#303030",
                            "fontFamily": "InterUI-Regular",
                            "fontSize": 16,
                            "lineHeight": 26,
                          }
                        }
                      >
                        I need prayer for...
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`The AddPrayerScreenConnected component should render a custom skipText 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "marginHorizontal": 16,
                  "marginVertical": 12,
                  "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 16,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 24,
                      "paddingVertical": 24,
                    }
                  }
                >
                  <View
                    hasAvatar={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "paddingBottom": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderRadius": 80,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 80,
                            "justifyContent": "center",
                            "width": 80,
                          }
                        }
                        themeSize={80}
                      >
                        <Image
                          fadeDuration={250}
                          onLoad={[Function]}
                          size="medium"
                          source={
                            Array [
                              Object {
                                "__typename": "ImageMediaSource",
                                "cache": "force-cache",
                                "uri": "https://1234.image.com",
                              },
                            ]
                          }
                          style={
                            Object {
                              "backgroundColor": "#A5A5A5",
                              "borderRadius": 40,
                              "bottom": 0,
                              "height": "100%",
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": "100%",
                            }
                          }
                          themeSize={80}
                        />
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Add your prayer
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={24}
                        bbWidth={24}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "marginRight": 8,
                            },
                            null,
                            Object {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            Array [
                              0,
                              4278190080,
                            ]
                          }
                          fillOpacity={1}
                          fillRule={1}
                          font={Object {}}
                          matrix={
                            Array [
                              1,
                              0,
                              0,
                              1,
                              0,
                              0,
                            ]
                          }
                          opacity={1}
                          originX={0}
                          originY={0}
                          propList={Array []}
                          rotation={0}
                          scaleX={1}
                          scaleY={1}
                          skewX={0}
                          skewY={0}
                          stroke={null}
                          strokeDasharray={null}
                          strokeDashoffset={null}
                          strokeLinecap={0}
                          strokeLinejoin={0}
                          strokeMiterlimit={4}
                          strokeOpacity={1}
                          strokeWidth={1}
                          vectorEffect={0}
                          x={0}
                          y={0}
                        >
                          <RNSVGPath
                            d="M12 23.5a11.5 11.5 0 100-23 11.5 11.5 0 000 23zm0 .5a12 12 0 100-24 12 12 0 000 24z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={0}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M17.7 11.7h-5.4V6.3a.3.3 0 00-.6 0v5.4H6.3a.3.3 0 000 .6h5.4v5.4a.3.3 0 00.6 0v-5.4h5.4a.3.3 0 000-.6z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        bold={false}
                        italic={false}
                        style={
                          Object {
                            "color": "#303030",
                            "fontFamily": "InterUI-Regular",
                            "fontSize": 16,
                            "lineHeight": 26,
                          }
                        }
                      >
                        I need prayer for...
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`The AddPrayerScreenConnected component should render avatars 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      keyboardDismissMode="on-drag"
      keyboardShouldPersistTaps="never"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "marginHorizontal": 16,
                  "marginVertical": 12,
                  "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 16,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "paddingHorizontal": 24,
                      "paddingVertical": 24,
                    }
                  }
                >
                  <View
                    hasAvatar={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "paddingBottom": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "borderRadius": 80,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 80,
                            "justifyContent": "center",
                            "width": 80,
                          }
                        }
                        themeSize={80}
                      >
                        <Image
                          fadeDuration={250}
                          onLoad={[Function]}
                          size="medium"
                          source={
                            Array [
                              Object {
                                "__typename": "ImageMediaSource",
                                "cache": "force-cache",
                                "uri": "https://1234.image.com",
                              },
                            ]
                          }
                          style={
                            Object {
                              "backgroundColor": "#A5A5A5",
                              "borderRadius": 40,
                              "bottom": 0,
                              "height": "100%",
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": "100%",
                            }
                          }
                          themeSize={80}
                        />
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Add your prayer
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingBottom": 10,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={24}
                        bbWidth={24}
                        height={24}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "marginRight": 8,
                            },
                            null,
                            Object {
                              "flex": 0,
                              "height": 24,
                              "width": 24,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={24}
                      >
                        <RNSVGGroup
                          fill={
                            Array [
                              0,
                              4278190080,
                            ]
                          }
                          fillOpacity={1}
                          fillRule={1}
                          font={Object {}}
                          matrix={
                            Array [
                              1,
                              0,
                              0,
                              1,
                              0,
                              0,
                            ]
                          }
                          opacity={1}
                          originX={0}
                          originY={0}
                          propList={Array []}
                          rotation={0}
                          scaleX={1}
                          scaleY={1}
                          skewX={0}
                          skewY={0}
                          stroke={null}
                          strokeDasharray={null}
                          strokeDashoffset={null}
                          strokeLinecap={0}
                          strokeLinejoin={0}
                          strokeMiterlimit={4}
                          strokeOpacity={1}
                          strokeWidth={1}
                          vectorEffect={0}
                          x={0}
                          y={0}
                        >
                          <RNSVGPath
                            d="M12 23.5a11.5 11.5 0 100-23 11.5 11.5 0 000 23zm0 .5a12 12 0 100-24 12 12 0 000 24z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={0}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                                "fillRule",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M17.7 11.7h-5.4V6.3a.3.3 0 00-.6 0v5.4H6.3a.3.3 0 000 .6h5.4v5.4a.3.3 0 00.6 0v-5.4h5.4a.3.3 0 000-.6z"
                            fill={
                              Array [
                                0,
                                4281348144,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        bold={false}
                        italic={false}
                        style={
                          Object {
                            "color": "#303030",
                            "fontFamily": "InterUI-Regular",
                            "fontSize": 16,
                            "lineHeight": 26,
                          }
                        }
                      >
                        I need prayer for...
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              bordered={false}
              disabled={true}
              pill={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#00676D",
                  "borderColor": "#00676D",
                  "borderRadius": 48,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
              >
                Share prayer
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;
